package com.pck.bricks.core.model

enum class DayStatus { NOT_SCHEDULED, SCHEDULED_PENDING, COMPLETED, MISSED, GAP_REPAIRED }
