package com.pck.bricks.core.model

enum class ScheduleType { DAILY, SPECIFIC_WEEKDAYS }
