package com.pck.bricks.core.model

enum class TierStatus { ACTIVE, COMPLETED, RESET, REVERTED }
