package com.pck.bricks.core.model

enum class TierType { BRONZE, SILVER, GOLD }
